--- a/contact.html
+++ b/contact.html
@@ -290,7 +290,7 @@
               <!-- Disable Captcha -->
               <input type="hidden" name="_captcha" value="false">
               <!-- Success Page -->
-              <input type="hidden" name="_next" value="https://riya-smile.vercel.app/thank-you.html">
+              <input type="hidden" name="_next" value="https://www.riyasmile.in/thank-you.html">
               <!-- Subject -->
               <input type="hidden" name="_subject" value="New Appointment Request from Website">
               
