--- a/doctors/dr-s-k-singh.html
+++ b/doctors/dr-s-k-singh.html
@@ -289,9 +289,10 @@
             <!-- Doctor Profile Header -->
             <article class="content-card">
               <div class="doctor-profile-header" style="display: flex; gap: 2rem; flex-wrap: wrap; align-items: flex-start;">
-                <div class="doctor-profile-image" style="flex-shrink: 0;">
-                  <div class="doctor-placeholder" style="width: 180px; height: 180px; background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
+                <div class="doctor-image">
+                  <div class="doctor-placeholder">
+                    <img src="../assets/images/doctor-1.webp" alt="Dr. S.K. Singh B.D.S — Director General Dentistry | 10+ Years Experience"
+                      loading="lazy">
                   </div>
                 </div>
                 <div class="doctor-profile-info" style="flex: 1; min-width: 280px;">
