--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Primary Meta Tags -->
   <title>Riya Smile Care Centre | Charitable Dental Clinic in Uttam Nagar, Delhi</title>
   <meta name="description"
-    content="Riya Smile Care Centre - Best charitable dental clinic in Uttam Nagar, Delhi. Affordable dental implants, RCT, braces & teeth whitening. Free Sunday checkups. Call +91 98213 45446">
+    content="“Riya Smile Care Centre: Best charitable dental clinic in Uttam Nagar, Delhi offering affordable implants, RCT, braces & teeth whitening.">
   <meta name="keywords"
     content="dentist uttam nagar, dental clinic om vihar, charitable dental clinic delhi, dental implants uttam nagar, root canal treatment delhi, braces orthodontist west delhi">
   <meta name="author" content="Riya Smile Care Centre">
@@ -1227,4 +1227,5 @@
 
 
 </html>
+
 
