--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Primary Meta Tags -->
-  <title>Riya Smile Care Centre | Charitable Dental Clinic in Uttam Nagar, Delhi</title>
+  <title>Riya Smile Care Centre: Charitable Dental Clinic in Uttam Nagar, Delhi</title>
   <meta name="description"
     content="“Riya Smile Care Centre: Best charitable dental clinic in Uttam Nagar, Delhi offering affordable implants, RCT, braces & teeth whitening.">
   <meta name="keywords"
@@ -1227,5 +1227,6 @@
 
 
 </html>
+
 
 
