map and before-after

--- a/doctors/index.html
+++ b/doctors/index.html
@@ -10,10 +10,10 @@
   <meta name="keywords" content="dentist uttam nagar, dental doctors om vihar, orthodontist west delhi, experienced dentist delhi">
   <meta name="robots" content="index, follow">
   
-  <link rel="canonical" href="https://riyasmile.in/doctors/">
+  <link rel="canonical" href="https://riyasmile.in/doctors">
   
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://riyasmile.in/doctors/">
+  <meta property="og:url" content="https://riyasmile.in/doctors">
   <meta property="og:title" content="Our Dentists | Riya Smile Care Centre Uttam Nagar">
   <meta property="og:description" content="Meet our team of experienced dentists specializing in all areas of dental care.">
   
