--- a/index.html
+++ b/index.html
@@ -598,8 +598,9 @@
     <section aria-label="Riya Smile Care Dental Clinic Gallery">
       <header class="section-header">
         <h2>Our Dental Clinic in Uttam Nagar, West Delhi</h2>
-        <p>Real images of Riya Smile Care Centre, a trusted charitable dental clinic in Om Vihar, Uttam Nagar, equipped with
-        modern dental technology and strict hygiene standards.</p>
+        <p>Real images of Riya Smile Care Centre, a trusted charitable dental clinic in Om Vihar, Uttam Nagar, equipped
+          with
+          modern dental technology and strict hygiene standards.</p>
       </header>
       <div class="clinic-gallery">
 
@@ -697,8 +698,8 @@
           <article class="doctor-card">
             <div class="doctor-image">
               <div class="doctor-placeholder">
-              <img src="assets/images/doctor-1.webp"
-                alt="Dr. S.K. Singh B.D.S — Director General Dentistry | 10+ Years Experience" loading="lazy">
+                <img src="assets/images/doctor-1.webp"
+                  alt="Dr. S.K. Singh B.D.S — Director General Dentistry | 10+ Years Experience" loading="lazy">
               </div>
             </div>
             <div class="doctor-info">
@@ -870,6 +871,76 @@
         <div class="text-center mt-4">
           <a href="contact.html#appointment" class="btn btn-primary">Book the Same Painless Treatment</a>
         </div>
+      </div>
+    </section>
+
+    <section class="before-after-wrapper"
+      aria-label="Before and After Dental Treatment Results at Riya Smile Care Centre">
+      <header class="section-header">
+        <h2>
+          Before & After Dental Treatment Results
+        </h2>
+
+        <p>
+          Real before and after dental treatment results of patients treated at Riya Smile Care Centre, a trusted
+          charitable
+          dental clinic in Uttam Nagar, West Delhi.
+        </p>
+      </header>
+
+
+      <div class="before-after-section">
+
+        <!-- Group 1 -->
+        <div class="before-after-group">
+          <div class="image-card">
+            <span class="label before">Before</span>
+            <img src="assets/images/before-patient-treatment-3.webp" alt="Before Dental Treatment">
+          </div>
+
+          <div class="image-card">
+            <span class="label after">After</span>
+            <img src="assets/images/after-patient-treatment-3.webp" alt="After Dental Treatment">
+          </div>
+        </div>
+
+        <!-- Group 2 -->
+        <div class="before-after-group">
+          <div class="image-card">
+            <span class="label before">Before</span>
+            <img src="assets/images/before-patient-treatment-1.webp" alt="Before Dental Treatment">
+          </div>
+
+          <div class="image-card">
+            <span class="label after">After</span>
+            <img src="assets/images/after-patient-treatment-1.webp" alt="After Dental Treatment">
+          </div>
+        </div>
+        <!-- Group 3 -->
+        <div class="before-after-group">
+          <div class="image-card">
+            <span class="label before">Before</span>
+            <img src="assets/images/before-patient-treatment-2.webp" alt="Before Dental Treatment">
+          </div>
+
+          <div class="image-card">
+            <span class="label after">After</span>
+            <img src="assets/images/after-patient-treatment-2.webp" alt="After Dental Treatment">
+          </div>
+        </div>
+        <!-- Group 4 -->
+        <div class="before-after-group">
+          <div class="image-card">
+            <span class="label before">Before</span>
+            <img src="assets/images/before-patient-treatment-4.webp" alt="Before Dental Treatment">
+          </div>
+
+          <div class="image-card">
+            <span class="label after">After</span>
+            <img src="assets/images/after-patient-treatment-4.webp" alt="After Dental Treatment">
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -1077,7 +1148,7 @@
 
           <div class="map-container">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.234!2d77.0631!3d28.6195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjjCsDM3JzEwLjIiTiA3N8KwMDMnNDcuMiJF!5e0!3m2!1sen!2sin!4v1234567890"
+              src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d2731.53236067969!2d77.04950147422251!3d28.62381473447884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d28.625275!2d77.053004!4m5!1s0x390d052125e3cd95%3A0x785c9ddaec684951!2sRiya%20Smile%20Care%20Centre(Charitable%20Dental%20Clinic)%2C%20METRO%20PILLAR%20706%2C%20FIRST%20FLOOR%2C%20WZ43%2C%20Om%20Vihar%20Phase%201%20Rd%2C%20near%20REFORM%20GYM%2C%20Uttam%20Nagar%20West%2C%20Phase%201%2C%20Om%20Vihar%2C%20Uttam%20Nagar%2C%20Delhi%2C%20110059!3m2!1d28.6223435!2d77.05114879999999!5e1!3m2!1sen!2sin!4v1770120225212!5m2!1sen!2sin"
               width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade" title="Riya Smile Care Centre location on Google Maps"
               aria-label="Map showing Riya Smile Care Centre location in Uttam Nagar, Delhi">
@@ -1227,6 +1298,3 @@
 
 
 </html>
-
-
-
