--- a/contact.html
+++ b/contact.html
@@ -389,7 +389,7 @@
         
         <div class="map-container" style="height: 400px; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
           <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.234!2d77.0631!3d28.6195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjjCsDM3JzEwLjIiTiA3N8KwMDMnNDcuMiJF!5e0!3m2!1sen!2sin!4v1234567890"
+             src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d2731.53236067969!2d77.04950147422251!3d28.62381473447884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d28.625275!2d77.053004!4m5!1s0x390d052125e3cd95%3A0x785c9ddaec684951!2sRiya%20Smile%20Care%20Centre(Charitable%20Dental%20Clinic)%2C%20METRO%20PILLAR%20706%2C%20FIRST%20FLOOR%2C%20WZ43%2C%20Om%20Vihar%20Phase%201%20Rd%2C%20near%20REFORM%20GYM%2C%20Uttam%20Nagar%20West%2C%20Phase%201%2C%20Om%20Vihar%2C%20Uttam%20Nagar%2C%20Delhi%2C%20110059!3m2!1d28.6223435!2d77.05114879999999!5e1!3m2!1sen!2sin!4v1770120225212!5m2!1sen!2sin"
             width="100%" 
             height="100%" 
             style="border:0;" 
