--- a/contact.html
+++ b/contact.html
@@ -284,7 +284,7 @@
             <h2 style="font-size: 1.5rem; margin-bottom: 1.5rem;">Book Your Appointment</h2>
             <p style="color: var(--text-light); margin-bottom: 1.5rem;">Fill out the form below and we'll get back to you shortly to confirm your appointment.</p>
             
-            <form action="https://formsubmit.co/niveshbansal917@gmail.com" method="POST">
+            <form action="https://formsubmit.co/racc.dental@gmail.com" method="POST">
               <!-- Honeypot -->
               <input type="text" name="_honey" style="display: none;">
               <!-- Disable Captcha -->
