canonical link upgrade

--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
   <meta name="robots" content="index, follow">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://riyasmile.in/about.html">
+  <link rel="canonical" href="https://www.riyasmile.in/about.html">
+
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
