--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="robots" content="index, follow">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://riyasmile.in/contact.html">
+  <link rel="canonical" href="https://www.riyasmile.in/contact.html">
   
   <!-- Open Graph -->
   <meta property="og:type" content="website">
