--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Cookie Policy for Riya Smile Care Centre website. Learn about how we use cookies and similar technologies on our dental clinic website.">
   <meta name="robots" content="index, follow">
   
-  <link rel="canonical" href="https://riyasmile.in/cookie-policy.html">
+  <link rel="canonical" href="https://www.riyasmile.in/cookie-policy.html">
   
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://riyasmile.in/cookie-policy.html">
