--- a/doctors/dr-p-kumar.html
+++ b/doctors/dr-p-kumar.html
@@ -13,7 +13,7 @@
   <meta name="robots" content="index, follow">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://riyasmile.in/doctors/dr-p-kumar.html">
+  <link rel="canonical" href="https://www.riyasmile.in/doctors/dr-p-kumar.html">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="profile">
