--- a/doctors/index.html
+++ b/doctors/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="dentist uttam nagar, dental doctors om vihar, orthodontist west delhi, experienced dentist delhi">
   <meta name="robots" content="index, follow">
   
-  <link rel="canonical" href="https://riyasmile.in/doctors">
+  <link rel="canonical" href="https://www.riyasmile.in/doctors">
   
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://riyasmile.in/doctors">
