--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <meta name="description"
     content="“Riya Smile Care Centre: Best charitable dental clinic in Uttam Nagar, Delhi offering affordable implants, RCT, braces & teeth whitening.">
   <meta name="keywords"
-    content="dentist uttam nagar, dental clinic om vihar, charitable dental clinic delhi, dental implants uttam nagar, root canal treatment delhi, braces orthodontist west delhi">
+    content="charitable dentist uttam nagar, dental clinic om vihar, charitable dental clinic delhi, dental implants uttam nagar, root canal treatment delhi, braces orthodontist west delhi">
   <meta name="author" content="Riya Smile Care Centre">
   <meta name="robots" content="index, follow">
 
   <meta name="google-site-verification" content="w3LxXz3bAd_E5PcMIXyo3N1HXCpT6wsDSa1ptlVHLig" />
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://riyasmile.in">
+  <link rel="canonical" href="https://www.riyasmile.in" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
