--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Privacy Policy for Riya Smile Care Centre dental clinic in Uttam Nagar, Delhi. Learn how we collect, use, and protect your personal information.">
   <meta name="robots" content="index, follow">
   
-  <link rel="canonical" href="https://riyasmile.in/privacy-policy.html">
+  <link rel="canonical" href="https://www.riyasmile.in/privacy-policy.html">
   
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://riyasmile.in/privacy-policy.html">
