--- a/services/index.html
+++ b/services/index.html
@@ -13,7 +13,7 @@
     content="dental services uttam nagar, dentist om vihar, dental treatment west delhi, affordable dental care delhi">
   <meta name="robots" content="index, follow">
 
-  <link rel="canonical" href="https://riyasmile.in/services/">
+  <link rel="canonical" href="https://www.riyasmile.in/services/">
 
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://riyasmile.in/services/">
