--- a/terms.html
+++ b/terms.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Terms and conditions for using Riya Smile Care Centre dental services and website. Read our terms of service for dental treatment in Uttam Nagar, Delhi.">
   <meta name="robots" content="index, follow">
   
-  <link rel="canonical" href="https://riyasmile.in/terms.html">
+  <link rel="canonical" href="https://www.riyasmile.in/terms.html">
   
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://riyasmile.in/terms.html">
