--- a/doctors/dr-anjali-aneja.html
+++ b/doctors/dr-anjali-aneja.html
@@ -13,7 +13,7 @@
   <meta name="author" content="Riya Smile Care Centre">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://riyasmile.in/doctors/dr-anjali-aneja.html">
+  <link rel="canonical" href="https://www.riyasmile.in/doctors/dr-anjali-aneja.html">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="profile">
