--- a/services/invisible-aligners-uttam-nagar.html
+++ b/services/invisible-aligners-uttam-nagar.html
@@ -13,7 +13,7 @@
   <meta name="robots" content="index, follow">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://riyasmile.in/services/invisible-aligners-uttam-nagar.html">
+  <link rel="canonical" href="https://www.riyasmile.in/services/invisible-aligners-uttam-nagar.html">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
